# python3-android

./: .gitignore  .gitlab-ci.yml  .travis.yml  Makefile  README.md  _build_single.sh  build.sh  check_all.py  check_all_tolerate.json  circle.yml  clean-build.sh  clean-builds.sh  clean.sh  docker-build.sh  env  fetch.sh  nvchecker.ini  pkg_vers.txt  test-setup.sh  test.sh
Android/: build_deps.py  configure.py  unversioned-libpython.patch  util.py
AndroidApp/: settings.gradle
AndroidApp/app/src/main/jni/: CMakeLists.txt  PythonThread.cpp  PythonThread.hpp  StdAfx.cpp  StdAfx.h  conversion.hpp  util.cpp  util.hpp
AndroidApp/app/src/main/jni/py_helpers/: python_helpers.cpp  python_helpers.hpp  python_processing.cpp  python_processing.hpp
AndroidApp/app/src/main/jni/python/: patchlevel.h  pyconfig.h  pyport.h  pythonrun.h
AndroidApp/app/src/main/jni/python32/: pyconfig.h
AndroidApp/app/src/main/jni/python32/python3.9/: pyconfig.h
AndroidApp/app/src/main/jni/python64/: pyconfig.h
devscripts/: c_rehash.py  env.sh  gen-gitlab-ci-yml.py  import_all.py  import_pgp_keys.sh  macports-archive-sites.conf  macports-chyen-pubkey.pem  package.sh  prepare-ndk.sh  readline_version.py  send-openssl.sh  send.sh  ssl_test.py  strip-ndk.sh  write_cpython_revision.sh
docker/: Dockerfile  docker-build.sh
mk/: build_ndk.sh  build_single.sh  clean_single.sh  common.sh  env.mk  get_source.py  get_source.sh  ndk_source.sh  test.sh  test_setup.sh
pybuild/: arch.py  builder.py  check_cpython_modules.py  clean.py  env.py  main.py  ndk.py  package.py  patch.py  pgp_keys.py  send.py  source.py  util.py
src/: Python-3.3.3-android-locale.patch  Python-3.3.3-android-misc.patch  Python-3.3.3-android-platform.patch  Python-3.3.3-cross-compile.patch  Python-3.3.3-python-misc.patch  Python-3.3.3.sh  bzip2-1.0.6-makefile-env.patch  (+3 more)
(+226 files in other folders)
